@@ -42,3 +42,6 @@ play_serrure_cutscene=true
 
 # play 'Game saved' sample when saving with level checkpoints (as in the 3DO version)
 play_gamesaved_sound=true
+
+# restore content from 'MEMO' cutscene
+restore_memo_cutscene=true
