@@ -1,5 +1,6 @@
 * release 0.4.7
 	- added detection for Macintosh CD version
+	- restored some content from MEMO cutscene
 
 * release 0.4.6
 	- added rewind to automatic saves
